--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hubbleprotocol/kamino-lending-sdk": "^2.9.12",
     "@solana/web3.js": "^1.91.4",
-    "pushover-ts": "^1.0.3"
+    "pushover-ts": "^1.0.3",
+    "uptime-monitor-sdk": "^0.1.1"
   }
 }
